--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <!-- lg end -->
               <div class="form-control hidden lg:block mr-3">
                 <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
-                <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="btn"><i class="fa-solid fa-magnifying-glass"></i>f</button>
               </div>
               <!-- sm end -->
               <div class="dropdown block lg:hidden">
@@ -72,28 +72,28 @@
             <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full relative">
                     <h1 class="absolute text-white text-center text-4xl font-bold">Exotic tastes at your <br /> doorstep</h1>
-                  <img src="./images/banner1.png" class="w-full" />
+                  <img src="./images/banner1.png" class="w-full"  alt="banner1" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a> 
                     <a href="#slide2" class="btn btn-circle">❯</a>
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                  <img src="./images/banner2.png" class="w-full" />
+                  <img src="./images/banner2.png" class="w-full" alt="banner1" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a> 
                     <a href="#slide3" class="btn btn-circle">❯</a>
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full">
-                  <img src="./images/banner3.png" class="w-full" />
+                  <img src="./images/banner3.png" class="w-full" alt="banner2"/>
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a> 
                     <a href="#slide4" class="btn btn-circle">❯</a>
                   </div>
                 </div> 
                 <div id="slide4" class="carousel-item relative w-full">
-                  <img src="./images/banner4.png" class="w-full" />
+                  <img src="./images/banner4.png" class="w-full" alt="banner3"/>
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a> 
                     <a href="#slide1" class="btn btn-circle">❯</a>
