--- a/index.html
+++ b/index.html
@@ -70,20 +70,23 @@
                 <a href="#slide4" class="btn btn-circle">❮</a>
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
-              <div class="hidden sm:block fixed absolute bottom-1/2 left-1/2 -translate-x-1/2 text-white sm:text-black md:text-blue-500 lg:text-red-400">
-                <div class="text-center sm:text-left md:text-center lg:text-center text-white">
-                  <h2 class="text-3xl font-bold py-0 lg:py-2 text-wrap sm:text-xl md:text-2xl lg:text-3xl">
+              <div
+                class="hidden sm:block fixed absolute bottom-1/2 left-1/2 -translate-x-1/2 text-white sm:text-black md:text-blue-500 lg:text-red-400"
+              >
+                <div
+                  class="text-center sm:text-left md:text-center lg:text-center text-white"
+                >
+                  <h2
+                    class="text-3xl font-bold py-0 lg:py-2 text-wrap sm:text-xl md:text-2xl lg:text-3xl"
+                  >
                     Exotic tastes at your doorstep
                   </h2>
                   <p class="sm:mb-3 md:mb-4 lg:mb-5">
                     We supply high-quality organic products
                   </p>
-                  <button class="btn bg-red-400 text-white">
-                    Shop Now
-                  </button>
+                  <button class="btn bg-red-400 text-white">Shop Now</button>
                 </div>
               </div>
-              
             </div>
             <div id="slide2" class="carousel-item relative w-full">
               <img src="./images/banner2.png" class="w-full" />
@@ -143,7 +146,52 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <br />
+    <main class="container mx-auto">
+      <!-- deal of the day -->
+      <section class="">
+        <div class="block lg:flex items-center justify-between w-full">
+          <!-- deal title -->
+          <div class="w-full lg:w-1/2">
+            <h2 class="text-2xl font-bold">Deal of the day</h2>
+            <p>
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical Latin literature from 45 BC, making
+              it over 2000 years old
+            </p>
+          </div>
+          <!-- countdown -->
+          <div class="w-full lg:w-1/2">
+            <div class="flex gap-5">
+              <div>
+                <span class="countdown font-mono text-4xl">
+                  <span style="--value: 15"></span>
+                </span>
+                days
+              </div>
+              <div>
+                <span class="countdown font-mono text-4xl">
+                  <span style="--value: 10"></span>
+                </span>
+                hours
+              </div>
+              <div>
+                <span class="countdown font-mono text-4xl">
+                  <span style="--value: 24"></span>
+                </span>
+                min
+              </div>
+              <div>
+                <span class="countdown font-mono text-4xl">
+                  <span style="--value: 37"></span>
+                </span>
+                sec
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <div></div>
   </body>
 </html>
