--- a/index.html
+++ b/index.html
@@ -149,19 +149,25 @@
     <br />
     <main class="container mx-auto">
       <!-- deal of the day -->
-      <section class="">
-        <div class="block lg:flex items-center justify-between w-full">
-          <!-- deal title -->
-          <div class="w-full lg:w-1/2">
-            <h2 class="text-2xl font-bold">Deal of the day</h2>
-            <p>
-              Contrary to popular belief, is not simply random text. It has
-              roots in a piece of classical Latin literature from 45 BC, making
-              it over 2000 years old
-            </p>
-          </div>
-          <!-- countdown -->
-          <div class="w-full lg:w-1/2">
+      <section>
+        <div>
+          <!-- item-1 -->
+          <div
+          class="flex flex-col lg:flex-row items-center mt-12 sm:mt-2 md:mt-10 lg:mt-12"
+
+          >
+            <!-- deal title -->
+            <div class="w-full whitespace-normal">
+              <h2 class="text-2xl font-bold">Deal of the day</h2>
+              <p class="whitespace-normal lg:w-1/2">
+                Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical Latin literature from 45 BC,
+                making it over 2000 years old. Contrary to popular belief, is
+                not simply random text. It has roots in a piece of classical
+                Latin literature from 45 BC, making it over 2000 years old
+              </p>
+            </div>
+            <!-- count -->
             <div class="flex gap-5">
               <div>
                 <span class="countdown font-mono text-4xl">
@@ -187,6 +193,194 @@
                 </span>
                 sec
               </div>
+            </div>
+          </div>
+          <!-- item-2 (Card) -->
+          <div
+            class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2"
+          >
+            <!-- apple -->
+            <div class="card max-w-80 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  class="w-1/3"
+                  src="./images/fruit6.png"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>Apples</p>
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <div class="card-actions">
+                  <button class="text-red-400">Details</button>
+                </div>
+              </div>
+            </div>
+            <!-- orange -->
+            <div class="card max-w-80 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>Orange</p>
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <div class="card-actions">
+                  <button class="text-red-400">Details</button>
+                </div>
+              </div>
+            </div>
+            <!-- leco -->
+            <div class="card max-w-80 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>Leco</p>
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <div class="card-actions">
+                  <button class="text-red-400">Details</button>
+                </div>
+              </div>
+            </div>
+            <!-- banana -->
+            <div class="card max-w-80 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>banana</p>
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <div class="card-actions">
+                  <button class="text-red-400">Details</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex items-center justify-center mt-5"><button class="btn btn-primary bg-red-400 text-white">Shop All</button></div>
+        </div>
+      </section>
+      <!-- Meet the team -->
+      <section>
+        <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn btn-primary">Get Started</button>
             </div>
           </div>
         </div>
