update video section

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         <div>
           <!-- item-1 -->
           <div
-          class="flex flex-col lg:flex-row items-center mt-12 sm:mt-2 md:mt-10 lg:mt-12"
-
+            class="flex flex-col lg:flex-row items-center mt-12 sm:mt-2 md:mt-10 lg:mt-12"
           >
             <!-- deal title -->
             <div class="w-full whitespace-normal">
@@ -369,18 +368,266 @@
               </div>
             </div>
           </div>
-          <div class="flex items-center justify-center mt-5"><button class="btn btn-primary bg-red-400 text-white">Shop All</button></div>
+          <div class="flex items-center justify-center mt-5">
+            <button class="btn btn-primary bg-red-400 text-white">
+              Shop All
+            </button>
+          </div>
         </div>
       </section>
       <!-- Meet the team -->
       <section>
-        <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
+        <div
+          class="hero min-h-screen mt-10"
+          style="background-image: url(./images/team.png)"
+        >
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="hero-content text-center text-neutral-content">
-            <div class="max-w-md">
-              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn btn-primary">Get Started</button>
+            <div class="max-w-md flex flex-col items-center">
+              <h1 class="mb-5 text-3xl font-bold">Meet the team section</h1>
+              <p class="mb-5">
+                Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical Latin literature from 45 BC,
+                making it over 2000 years old
+              </p>
+              <div
+                class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 items-center gap-2"
+              >
+                <!-- man-1 -->
+                <div class="card w-36 shadow-xl">
+                  <figure class="px-10 pt-10">
+                    <img
+                      src="./images/member1.png"
+                      alt="Shoes"
+                      class="rounded-xl"
+                    />
+                  </figure>
+                  <div class="card-body items-center text-center">
+                    <h2 class="card-title">Awlad Hossain</h2>
+                    <p>Fruits Expert</p>
+                    <div class="flex items-center gap-2">
+                      <button class="">
+                        <i
+                          class="fa-brands fa-facebook bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-twitter bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-linkedin bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <!-- man-2 -->
+                <div class="card w-36 shadow-xl">
+                  <figure class="px-10 pt-10">
+                    <img
+                      src="./images/member2.png"
+                      alt="Shoes"
+                      class="rounded-xl"
+                    />
+                  </figure>
+                  <div class="card-body items-center text-center">
+                    <h2 class="card-title">Awlad Hossain</h2>
+                    <p>Fruits Expert</p>
+                    <div class="flex items-center gap-2">
+                      <button class="">
+                        <i
+                          class="fa-brands fa-facebook bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-twitter bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-linkedin bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <!-- man-3 -->
+                <div class="card w-36 shadow-xl">
+                  <figure class="px-10 pt-10">
+                    <img
+                      src="./images/member3.png"
+                      alt="Shoes"
+                      class="rounded-xl"
+                    />
+                  </figure>
+                  <div class="card-body items-center text-center">
+                    <h2 class="card-title">Awlad Hossain</h2>
+                    <p>Fruits Expert</p>
+                    <div class="flex items-center gap-2">
+                      <button class="">
+                        <i
+                          class="fa-brands fa-facebook bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-twitter bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-linkedin bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <!-- man-4 -->
+                <div class="card w-36 shadow-xl">
+                  <figure class="px-10 pt-10">
+                    <img
+                      src="./images/member4.png"
+                      alt="Shoes"
+                      class="rounded-xl"
+                    />
+                  </figure>
+                  <div class="card-body items-center text-center">
+                    <h2 class="card-title">Awlad Hossain</h2>
+                    <p>Fruits Expert</p>
+                    <div class="flex items-center gap-2">
+                      <button class="">
+                        <i
+                          class="fa-brands fa-facebook bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-twitter bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                      <button class="">
+                        <i
+                          class="fa-brands fa-linkedin bg-red-400 p-1 rounded-full"
+                        ></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Why choose us -->
+      <section>
+        <div class="text-center mt-10">
+          <h1 class="text-3xl font-bold">Why Choose Us</h1>
+          <p>
+            Contrary to popular belief, is not simply random text. It has roots
+            in a piece of <br />
+            classical Latin literature from 45 BC, making it over 2000 years old
+          </p>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 items-center justify-center gap-2 mt-5">
+          <!-- 1st -->
+          <div>
+            <div class="flex items-center gap-2 my-2">
+              <i class="fa-solid fa-people-group p-3 rounded-full bg-gray-200"></i>
+              <div>
+                <h5 class="text-lg font-bold my-2">
+                  <span class="border-b-4">Dedicated</span> Team
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center gap-2 my-2">
+              <i class="fa-solid fa-fish-fins p-3 rounded-full bg-gray-200"></i>
+              <div>
+                <h5 class="text-lg font-bold my-2">
+                  <span class="border-b-4">Fresh</span>Best
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center gap-2 my-2">
+              <i class="fa-solid fa-gifts p-3 rounded-full bg-gray-200"></i>
+              <div>
+                <h5 class="text-lg font-bold my-2">
+                  <span class="border-b-4">Gift</span> Certificates
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- 2nd -->
+          <div class="mx-auto">
+            <img src="./images/whychoose1.png" alt="whychoose1">
+          </div>
+          <!-- 3rd -->
+          <div>
+            <div class="flex items-center gap-2 my-2">
+              <div class="text-right">
+                <h5 class="text-lg font-bold my-2">
+                  Integrated <span class="border-b-4">Supplier</span> 
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <i class="fa-solid fa-people-group p-3 rounded-full bg-gray-200"></i>
+            </div>
+            <div class="flex items-center gap-2 my-2">
+              <div class="text-right">
+                <h5 class="text-lg font-bold my-2">
+                  Sustainable <span class="border-b-4">Practice</span> 
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <i class="fa-solid fa-people-group p-3 rounded-full bg-gray-200"></i>
+            </div>
+            <div class="flex items-center gap-2 my-2">
+              <div class="text-right">
+                <h5 class="text-lg font-bold my-2">
+                  The Benefits <span class="border-b-4">Only</span> 
+                </h5>
+                <p>
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <i class="fa-solid fa-bell-concierge p-3 rounded-full bg-gray-200"></i>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <!-- Video -->
+      <section>
+        <div class="hero mt-10">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <div class="text-center lg:text-left m-5">
+              <h1 class="text-5xl font-bold">Let's have a look</h1>
+              <p class="py-6">Fruit juice is the best for health. It's recover to help our water crisis in out body. We have to drink enough woter.</p>
+            </div>
+            <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl">
+                <iframe width="400" height="400" src="https://www.youtube.com/embed/CxbBQar9les?si=JQs3YaJu7-FVZ8c2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
