--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <!-- Navbar -->
       <nav class="text-white">
         <div class="flex justify-between items-center p-2 bg-red-500 rounded-full">
-          <!-- nav items -->
-          <div class="flex text-white items-center gap-5 font-bold">
+          <!-- nav items for lg -->
+          <div class="flex text-white items-center gap-5 font-bold hidden lg:flex">
             <p>Home</p>
             <p>About Us</p>
             <p>Shop</p>
@@ -53,7 +53,7 @@
             <a class="ml-2 font-bold text-xl">Fruit Burst</a>
           </div>
           <!-- search -->
-          <div class="flex-none gap-2 text-black relative">
+          <div class="flex-none gap-2 text-black relative hidden lg:block">
             <input
                 type="text"
                 placeholder="Search"
@@ -61,6 +61,26 @@
               />
               <i class="fa-solid fa-magnifying-glass absolute top-4 right-5"></i>
           </div>
+          <!-- sm md -->
+          <!-- menu -->
+          <div class="block lg:hidden">
+            <div class="dropdown">
+              <label tabindex="0" class="btn btn-ghost btn-circle">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+              </label>
+              <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-black">
+                <li><a>Homepage</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>About</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- logo sm -->
+          <div class="flex items-center lg:hidden">
+            <img src="./images/logo.png" alt="logo" />
+            <a class="ml-2 font-bold text-xl">Fruit Burst</a>
+          </div>
+          
         </div>
       </nav>
       <!-- Banner -->
@@ -632,8 +652,8 @@
               <h1 class="text-5xl font-bold">Let's have a look</h1>
               <p class="py-6">Fruit juice is the best for health. It's recover to help our water crisis in out body. We have to drink enough woter.</p>
             </div>
-            <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl">
-                <iframe width="400" height="400" src="https://www.youtube.com/embed/CxbBQar9les?si=JQs3YaJu7-FVZ8c2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl mx-auto">
+                <iframe class="mx-auto" width="360" height="400" src="https://www.youtube.com/embed/CxbBQar9les?si=JQs3YaJu7-FVZ8c2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
