--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer footer-center p-10 bg-black text-white text-base-content rounded">
+    <footer class="f footer footer-center p-10 bg-black text-white text-base-content rounded">
       <div class="flex">
           <img src="./images/logo.png" alt="logo">
           <h3 class="text-xl font-bold">Fruit Burst</h3>
